--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <script src="./js/dataFunction.js"></script>
     <title>Pokemon Search App</title>
   </head>
-  <body>
-    <header>
+  <body class="container">
+    <header class="header">
       <select id="pokemonInput" name="pokemonInput" class="pokemonInputs">
         <!--POKEMON DROPDOWN-->
         <option value="default" selected>Select a Pokemon...</option>
       </select>
     </header>
-    <main>
+    <main class="main">
       <section id="pokemon-card" class="card-main">
         <h3 id="pokemon-name" class="card-name"><!--POKEMON NAME--></h3>
         <img src='' id="pokemon-sprite" class="card-sprite" /><!--POKEMON SPRITE-->
@@ -24,7 +24,7 @@
         </p>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <p class="footer-text">
         Created by
         <a href="https://jiggyart.org" target="_blank">Jennifer D. Ignacio</a>
